chat mock disabled

--- a/src/app/dashboard/chat/chat.component.html
+++ b/src/app/dashboard/chat/chat.component.html
@@ -83,162 +83,162 @@
         </div>
 
         <!--Mock if we fail to retrieve messages-->
-        <div *ngIf="simpleChatItems.length == 0">
-          <div class="widget__message-wrap widget__message-wrap--right">
-            <div class="widget__message">
-              <div class="widget__message-nickname">Igor</div>
-              <p class="widget__message-text">it's too soon to say it as scam guys</p>
-            </div>
-            <div class="widget__message-icon">
-              <img src="" alt="">
-              <span>I</span>
-            </div>
-            <div class="widget__message-time">10:32</div>
-          </div>
-          <div class="widget__message-wrap widget__message-wrap--right">
-            <div class="widget__message">
-              <div class="widget__message-nickname"></div>
-              <p class="widget__message-text">it's too soon to say it as scam guys</p>
-            </div>
-            <div class="widget__message-icon">
-              <img src="" alt="">
-              <span>I</span>
-            </div>
-            <div class="widget__message-time">10:32</div>
-          </div>
-          <div class="widget__message-wrap widget__message-wrap--right">
-            <div class="widget__message">
-              <div class="widget__message-nickname">Igor</div>
-              <p class="widget__message-text">it's too soon to say it as scam guys</p>
-            </div>
-            <div class="widget__message-icon">
-              <img src="" alt="">
-              <span>I</span>
-            </div>
-            <div class="widget__message-time">10:32</div>
-          </div>
-          <div class="widget__message-wrap widget__message-wrap--right">
-            <div class="widget__message">
-              <div class="widget__message-nickname"></div>
-              <p class="widget__message-text">it's too soon to say it as scam guys</p>
-            </div>
-            <div class="widget__message-icon">
-              <img src="" alt="">
-              <span>I</span>
-            </div>
-            <div class="widget__message-time">10:32</div>
-          </div>
-          <div class="widget__message-wrap widget__message-wrap--right">
-            <div class="widget__message">
-              <div class="widget__message-nickname">Igor</div>
-              <p class="widget__message-text">it's too soon to say it as scam guys</p>
-            </div>
-            <div class="widget__message-icon">
-              <img src="" alt="">
-              <span>I</span>
-            </div>
-            <div class="widget__message-time">10:32</div>
-          </div>
-          <div class="widget__message-wrap widget__message-wrap--right">
-            <div class="widget__message">
-              <div class="widget__message-nickname"></div>
-              <p class="widget__message-text">it's too soon to say it as scam guys</p>
-            </div>
-            <div class="widget__message-icon">
-              <img src="" alt="">
-              <span>I</span>
-            </div>
-            <div class="widget__message-time">10:32</div>
-          </div>
-          <div class="widget__message-wrap widget__message-wrap--right">
-            <div class="widget__message">
-              <div class="widget__message-nickname">Igor</div>
-              <p class="widget__message-text">it's too soon to say it as scam guys</p>
-            </div>
-            <div class="widget__message-icon">
-              <img src="" alt="">
-              <span>I</span>
-            </div>
-            <div class="widget__message-time">10:32</div>
-          </div>
-          <div class="widget__message-wrap widget__message-wrap--right">
-            <div class="widget__message">
-              <div class="widget__message-nickname"></div>
-              <p class="widget__message-text">it's too soon to say it as scam guys</p>
-            </div>
-            <div class="widget__message-icon">
-              <img src="" alt="">
-              <span>I</span>
-            </div>
-            <div class="widget__message-time">10:32</div>
-          </div>
-          <div class="widget__message-wrap widget__message-wrap--right">
-            <div class="widget__message">
-              <div class="widget__message-nickname">Igor</div>
-              <p class="widget__message-text">it's too soon to say it as scam guys</p>
-            </div>
-            <div class="widget__message-icon">
-              <img src="" alt="">
-              <span>I</span>
-            </div>
-            <div class="widget__message-time">10:32</div>
-          </div>
-          <div class="widget__message-wrap widget__message-wrap--right">
-            <div class="widget__message">
-              <div class="widget__message-nickname"></div>
-              <p class="widget__message-text">it's too soon to say it as scam guys</p>
-            </div>
-            <div class="widget__message-icon">
-              <img src="" alt="">
-              <span>I</span>
-            </div>
-            <div class="widget__message-time">10:32</div>
-          </div>
-          <div class="widget__message-wrap widget__message-wrap--right">
-            <div class="widget__message">
-              <div class="widget__message-nickname">Igor</div>
-              <p class="widget__message-text">it's too soon to say it as scam guys</p>
-            </div>
-            <div class="widget__message-icon">
-              <img src="" alt="">
-              <span>I</span>
-            </div>
-            <div class="widget__message-time">10:32</div>
-          </div>
-          <div class="widget__message-wrap widget__message-wrap--right">
-            <div class="widget__message">
-              <div class="widget__message-nickname"></div>
-              <p class="widget__message-text">it's too soon to say it as scam guys</p>
-            </div>
-            <div class="widget__message-icon">
-              <img src="" alt="">
-              <span>I</span>
-            </div>
-            <div class="widget__message-time">10:32</div>
-          </div>
-          <div class="widget__message-wrap widget__message-wrap--right">
-            <div class="widget__message">
-              <div class="widget__message-nickname">Igor</div>
-              <p class="widget__message-text">it's too soon to say it as scam guys</p>
-            </div>
-            <div class="widget__message-icon">
-              <img src="" alt="">
-              <span>I</span>
-            </div>
-            <div class="widget__message-time">10:32</div>
-          </div>
-          <div class="widget__message-wrap widget__message-wrap--right">
-            <div class="widget__message">
-              <div class="widget__message-nickname"></div>
-              <p class="widget__message-text">it's too soon to say it as scam guys</p>
-            </div>
-            <div class="widget__message-icon">
-              <img src="" alt="">
-              <span>I</span>
-            </div>
-            <div class="widget__message-time">10:32</div>
-          </div>
-        </div>
+        <!--<div *ngIf="simpleChatItems.length == 0">-->
+          <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+            <!--<div class="widget__message">-->
+              <!--<div class="widget__message-nickname">Igor</div>-->
+              <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+            <!--</div>-->
+            <!--<div class="widget__message-icon">-->
+              <!--<img src="" alt="">-->
+              <!--<span>I</span>-->
+            <!--</div>-->
+            <!--<div class="widget__message-time">10:32</div>-->
+          <!--</div>-->
+          <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+            <!--<div class="widget__message">-->
+              <!--<div class="widget__message-nickname"></div>-->
+              <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+            <!--</div>-->
+            <!--<div class="widget__message-icon">-->
+              <!--<img src="" alt="">-->
+              <!--<span>I</span>-->
+            <!--</div>-->
+            <!--<div class="widget__message-time">10:32</div>-->
+          <!--</div>-->
+          <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+            <!--<div class="widget__message">-->
+              <!--<div class="widget__message-nickname">Igor</div>-->
+              <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+            <!--</div>-->
+            <!--<div class="widget__message-icon">-->
+              <!--<img src="" alt="">-->
+              <!--<span>I</span>-->
+            <!--</div>-->
+            <!--<div class="widget__message-time">10:32</div>-->
+          <!--</div>-->
+          <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+            <!--<div class="widget__message">-->
+              <!--<div class="widget__message-nickname"></div>-->
+              <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+            <!--</div>-->
+            <!--<div class="widget__message-icon">-->
+              <!--<img src="" alt="">-->
+              <!--<span>I</span>-->
+            <!--</div>-->
+            <!--<div class="widget__message-time">10:32</div>-->
+          <!--</div>-->
+          <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+            <!--<div class="widget__message">-->
+              <!--<div class="widget__message-nickname">Igor</div>-->
+              <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+            <!--</div>-->
+            <!--<div class="widget__message-icon">-->
+              <!--<img src="" alt="">-->
+              <!--<span>I</span>-->
+            <!--</div>-->
+            <!--<div class="widget__message-time">10:32</div>-->
+          <!--</div>-->
+          <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+            <!--<div class="widget__message">-->
+              <!--<div class="widget__message-nickname"></div>-->
+              <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+            <!--</div>-->
+            <!--<div class="widget__message-icon">-->
+              <!--<img src="" alt="">-->
+              <!--<span>I</span>-->
+            <!--</div>-->
+            <!--<div class="widget__message-time">10:32</div>-->
+          <!--</div>-->
+          <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+            <!--<div class="widget__message">-->
+              <!--<div class="widget__message-nickname">Igor</div>-->
+              <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+            <!--</div>-->
+            <!--<div class="widget__message-icon">-->
+              <!--<img src="" alt="">-->
+              <!--<span>I</span>-->
+            <!--</div>-->
+            <!--<div class="widget__message-time">10:32</div>-->
+          <!--</div>-->
+          <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+            <!--<div class="widget__message">-->
+              <!--<div class="widget__message-nickname"></div>-->
+              <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+            <!--</div>-->
+            <!--<div class="widget__message-icon">-->
+              <!--<img src="" alt="">-->
+              <!--<span>I</span>-->
+            <!--</div>-->
+            <!--<div class="widget__message-time">10:32</div>-->
+          <!--</div>-->
+          <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+            <!--<div class="widget__message">-->
+              <!--<div class="widget__message-nickname">Igor</div>-->
+              <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+            <!--</div>-->
+            <!--<div class="widget__message-icon">-->
+              <!--<img src="" alt="">-->
+              <!--<span>I</span>-->
+            <!--</div>-->
+            <!--<div class="widget__message-time">10:32</div>-->
+          <!--</div>-->
+          <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+            <!--<div class="widget__message">-->
+              <!--<div class="widget__message-nickname"></div>-->
+              <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+            <!--</div>-->
+            <!--<div class="widget__message-icon">-->
+              <!--<img src="" alt="">-->
+              <!--<span>I</span>-->
+            <!--</div>-->
+            <!--<div class="widget__message-time">10:32</div>-->
+          <!--</div>-->
+          <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+            <!--<div class="widget__message">-->
+              <!--<div class="widget__message-nickname">Igor</div>-->
+              <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+            <!--</div>-->
+            <!--<div class="widget__message-icon">-->
+              <!--<img src="" alt="">-->
+              <!--<span>I</span>-->
+            <!--</div>-->
+            <!--<div class="widget__message-time">10:32</div>-->
+          <!--</div>-->
+          <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+            <!--<div class="widget__message">-->
+              <!--<div class="widget__message-nickname"></div>-->
+              <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+            <!--</div>-->
+            <!--<div class="widget__message-icon">-->
+              <!--<img src="" alt="">-->
+              <!--<span>I</span>-->
+            <!--</div>-->
+            <!--<div class="widget__message-time">10:32</div>-->
+          <!--</div>-->
+          <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+            <!--<div class="widget__message">-->
+              <!--<div class="widget__message-nickname">Igor</div>-->
+              <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+            <!--</div>-->
+            <!--<div class="widget__message-icon">-->
+              <!--<img src="" alt="">-->
+              <!--<span>I</span>-->
+            <!--</div>-->
+            <!--<div class="widget__message-time">10:32</div>-->
+          <!--</div>-->
+          <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+            <!--<div class="widget__message">-->
+              <!--<div class="widget__message-nickname"></div>-->
+              <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+            <!--</div>-->
+            <!--<div class="widget__message-icon">-->
+              <!--<img src="" alt="">-->
+              <!--<span>I</span>-->
+            <!--</div>-->
+            <!--<div class="widget__message-time">10:32</div>-->
+          <!--</div>-->
+        <!--</div>-->
 
       </ng-scrollbar>
     </div>
