--- a/src/assets/scss/pages/_referral.scss
+++ b/src/assets/scss/pages/_referral.scss
@@ -39,6 +39,108 @@
       width: 130px;
       margin-right: 24px;
     }
+    &__earned-wrap{
+      display: flex;
+      align-items: center;
+      .tilda{
+        color:$darker-blue;
+        margin: 0 8px;
+      }
+    }
+    &__more-btn{
+      margin-right: 16px;
+      &:hover{
+        cursor: pointer;
+      }
+      svg{
+        fill:$darker-blue;
+      }
+    }
+    &__people-icon{
+      margin-right: 12px;
+      svg{
+        vertical-align: middle;
+        fill:$darker-blue;
+      }
+    }
+    .table__row{
+      & td:nth-child(1){
+        width: 300px;
+      }
+      //& td:nth-child(2){
+      //  width: 25%;
+      //}
+      & td:nth-child(3){
+        width: 55px;
+      }
+      //& td:nth-child(4){
+      //  width: 25%;
+      //}
+      //& td:nth-child(5){
+      //  width: 12.5%;
+      //}
+    }
+    &__level2{
+      padding-left: 32px;
+      .table--more-info{
+        border-bottom: none;
+      }
+      .table__row{
+        background-color: unset !important;
+        td.spacer{
+          border-bottom: none;
+          width: 16px;
+        }
+        td{
+          border-bottom: 1px solid rgba(148,194,255,.2);
+        }
+        //& td:nth-child(1){
+        //  border-bottom: none;
+        //  width: 16px;
+        //}
+        & td:nth-child(2){
+          width: 276px;
+        }
+        & td:nth-child(3){
+          width: auto;
+        }
+        & td:nth-child(4){
+          width: 55px;
+        }
+        //& td:nth-child(5){
+        //  width: 25%;
+        //}
+        //& td:nth-child(6){
+        //  width: 10%;
+        //}
+      }
+    }
+    &__level3{
+      padding-left: 64px;
+      .table--more-info{
+        border-bottom: none;
+      }
+      .table__row{
+        background-color: unset !important;
+        td.spacer{
+          border-bottom: none;
+          width: 16px;
+        }
+        td{
+          border-bottom: 1px solid rgba(148,194,255,.2);
+        }
+        & td:nth-child(2){
+          width: 276px;
+        }
+        & td:nth-child(3){
+          width: auto;
+        }
+        & td:nth-child(4){
+          width: 55px;
+        }
+      }
+    }
+
     /*--- elements end ---*/
   }
 }
@@ -57,6 +159,21 @@
         &:after{
           z-index: 0;
           background-color: $light-blue;
+        }
+      }
+      &__earned-wrap{
+        .tilda{
+          color:$light-blue;
+        }
+      }
+      &__more-btn{
+        svg{
+          fill:$light-blue;
+        }
+      }
+      &__people-icon{
+        svg{
+          fill:$light-blue;
         }
       }
     }
