fix order-book mobile, fix chat

--- a/src/app/dashboard/trade-history/trade-history.component.scss
+++ b/src/app/dashboard/trade-history/trade-history.component.scss
@@ -1,6 +1,7 @@
 @import "../../../assets/scss/variables";
 .widget{
   &__table{
+    margin-top: 0;
     td,th{
       &:first-of-type{
         padding-left: 12px;
