--- a/src/app/dashboard/chat/chat.component.scss
+++ b/src/app/dashboard/chat/chat.component.scss
@@ -1,29 +1,13 @@
-.widget__scroll{
-  right: 6px;
-}
-
 ng-scrollbar{
   display: block;
   width: 100%;
-  //height: auto;
   height: 400px;
   margin: auto;
-  //padding: 5px;
 }
 
-//li{
-//  padding: 10px;
-//  border-bottom: 1px solid #ccc;
-//}
-
-
-.widget__chat-wrap{
-  padding: 0;
-  margin: 0px;
-  overflow: auto;
+:host {
+  width: 100%;
 }
-
-
-.widget__message-wrap{
-  //margin: 0 20px 4px 0;
+.widget__content{
+  height: calc(100% - 44px);
 }
