--- a/src/app/dashboard/order-book/order-book.component.scss
+++ b/src/app/dashboard/order-book/order-book.component.scss
@@ -8,6 +8,7 @@
 .widget__content {
   position: relative;
   overflow: hidden;
+  height: 100%;
 }
 
 .order-book-bg.show {
@@ -58,8 +59,8 @@
 }
 
 .items.mobile {
-  min-height: 400px;
-  max-height: 400px;
+  min-height: calc(50% - 23px);
+  max-height: calc(50% - 23px);
 }
 
 .visualization {
@@ -76,7 +77,7 @@
   .visual-item {
     max-width: 100%;
     margin-left: auto;
-    height: 20px;
+    height: calc(100% / 10);
     opacity: 0.5;
   }
 
@@ -93,6 +94,7 @@
   flex-wrap: nowrap;
   position: relative;
   z-index: 100;
+  height: calc(100% / 10);
 }
 .order-table {
   position: relative;
@@ -123,7 +125,6 @@
     max-width: 100%;
     padding-left: 4px;
     padding-right: 4px;
-    line-height: 16px;
   }
 
   .info {
@@ -140,7 +141,6 @@
     max-width: 100%;
     padding-left: 4px;
     padding-right: 4px;
-    line-height: 16px;
   }
 
   .total {
@@ -148,7 +148,6 @@
     max-width: 100%;
     padding-left: 4px;
     padding-right: 4px;
-    line-height: 16px;
   }
 }
 
@@ -193,3 +192,4 @@
 :host {
   width: 100%;
 }
+
