--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -122,7 +122,7 @@
   }
   &__graph {
     position: relative;
-    height: 100%;
+    height: calc(100% - 45px);
     overflow-x: hidden;
     overflow-y: auto;
     &--mob {
