--- a/src/app/dashboard/orders/open-orders/open-orders.component.html
+++ b/src/app/dashboard/orders/open-orders/open-orders.component.html
@@ -32,11 +32,11 @@
       </div>
     </td>
     <td class="table__cell">
-      <span class="orders__type-buy">{{item.operationType}} <span>({{item.orderBaseType}})</span></span>
+      <span class="orders__type-buy">{{item.operationType}} <span></span></span>
       <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
     </td>
     <td class="table__cell">
-      <span>{{item.exExchangeRate}} USD</span>
+      <span>{{item.exExchangeRate}} </span>
     </td>
     <td class="table__cell">
       <span>{{item.amountConvert}} BTC</span>
