--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -202,7 +202,7 @@
         <img class="header-mob__submenu-link-img" src="../../assets/img/trade.svg">
         <span class="header-mob__submenu-link-text">Trade</span>
       </a>
-      <a class="header-mob__submenu-link" (click)="setMobileWidget('markets')">
+      <a class="header-mob__submenu-link" >
         <img class="header-mob__submenu-link-img" src="../../assets/img/wallet.svg">
         <span class="header-mob__submenu-link-text">Balances</span>
       </a>
