--- a/src/app/dashboard/order-book/order-book.component.html
+++ b/src/app/dashboard/order-book/order-book.component.html
@@ -122,7 +122,7 @@
             [style.height]="(200/dataBurBuy.length) + 'px'"></div>
         </div>
 
-        <div class="item" *ngFor="let item of dataBurBuy; let i = index" (click)="onSelectOrder(i, item)">
+        <div class="item" *ngFor="let item of dataBurBuy; let i = index" (click)="onSelectOrder(i, item, 'trading')">
           <div class="order" [style.lineHeight]="(elementHeight/dataBurBuy.length) + 'px'" [style.height]="(elementHeight/dataBurBuy.length) + 'px'">
             <span>
               {{item.amountBase | number:'1.1-8'}}
@@ -182,7 +182,7 @@
             [style.height]="(elementHeightMobile/dataForSell.length) + 'px'"></div>
         </div>
 
-        <div class="item" *ngFor="let item of dataForSell; let i = index" (click)="onSelectOrder(i, item)">
+        <div class="item" *ngFor="let item of dataForSell; let i = index" (click)="onSelectOrder(i, item, 'trading')">
           <div class="order" [style.lineHeight]="(elementHeightMobile/dataForSell.length) + 'px'" [style.height]="(elementHeightMobile/dataForSell.length) + 'px'">
             <span>
               {{item.amountBase | number:'1.1-8'}}
@@ -221,7 +221,7 @@
             [style.height]="(elementHeightMobile/dataBurBuy.length) + 'px'"></div>
         </div>
 
-        <div class="item" *ngFor="let item of dataBurBuy; let i = index" (click)="onSelectOrder(i, item)">
+        <div class="item" *ngFor="let item of dataBurBuy; let i = index" (click)="onSelectOrder(i, item, 'trading')">
           <div class="order" [style.lineHeight]="(elementHeightMobile/dataBurBuy.length) + 'px'" [style.height]="(elementHeightMobile/dataBurBuy.length) + 'px'">
             <span>
               {{item.amountBase | number:'1.1-8'}}
