--- a/src/app/dashboard/trading/trading.component.html
+++ b/src/app/dashboard/trading/trading.component.html
@@ -199,7 +199,7 @@
           <a href="#">{{ (marketService.currencyPairsInfo$ | async).balanceByCurrency1 }} {{arrPairName[0]}}</a>
         </div>
         <div>
-          Fee: {{order.commission}} {{arrPairName[0]}}
+          Fee: {{order.commission | number:'1.1-8'}} {{arrPairName[0]}}
         </div>
       </div>
       <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
@@ -217,7 +217,7 @@
 
 
 
-  <div class="widget__content widget__content--mob" style="height: 100%;" >
+  <div class="widget__content widget__content--mob" *ngIf="(breakPointService.breakpoint$ | async) === 'mobile'" style="height: 100%">
     <div class="widget__header--mob">
       <div class="widget__name-mob widget__trade-title widget__trade-title--green" *ngIf="mainTab === 'BUY'" ><img src="../../assets/img/btc-icon.svg" alt="">Buy BTC</div>
       <div class="widget__name-mob widget__trade-title widget__trade-title--red" *ngIf="mainTab === 'SELL'" ><img src="../../assets/img/btc-icon.svg" alt="">Sell BTC</div>
@@ -234,7 +234,8 @@
     <form  [formGroup]="limitForm" class="widget__trading-form--mob" *ngIf="dropdownLimitValue !== 'STOP_LIMIT'">
       <div class="row row--jcsb widget__trading-row">
         <div class="wrap-input widget__input widget__input--mr32">
-          <input class="wrap-input__input" type="text" formControlName="quantityOf"
+          <input class="wrap-input__input" type="text"
+                 formControlName="quantityOf"
                  (input)="quantityIput($event)"
                  name="quantityOf">
           <label class="wrap-input__label" for="">Quantity of {{arrPairName[0]}}</label>
