fixed: bug in graph component

--- a/src/app/dashboard/graph/graph.component.html
+++ b/src/app/dashboard/graph/graph.component.html
@@ -100,8 +100,8 @@
      <div class="widget__graph--mob">
       <!-- <div class="amcharts-stock_chart_div" id="tv_chart_container"></div> -->
       <div class="widget__buy-sell-btn-wrap" style="margin-bottom: 45px;">
-        <a href="#" class="widget__buy-sell-btn widget__buy-sell-btn--green" (click)="setMobileWidget('trading')">Buy BTC</a>
-        <a href="#" class="widget__buy-sell-btn widget__buy-sell-btn--red" (click)="setMobileWidget('trading')">Sell BTC</a>
+        <a class="widget__buy-sell-btn widget__buy-sell-btn--green" (click)="setMobileWidget('trading', 'BUY')">Buy BTC</a>
+        <a class="widget__buy-sell-btn widget__buy-sell-btn--red" (click)="setMobileWidget('trading', 'SELL')">Sell BTC</a>
       </div>
     </div>
   </div>
