--- a/src/app/dashboard/trading/trading.component.html
+++ b/src/app/dashboard/trading/trading.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
   </div>
-  <div class="tabs widget__tabs " style="margin: 0 24px;" *ngIf="currentPair">
+  <div class="tabs widget__tabs" *ngIf="currentPair">
     <button class="tabs__item tabs__item--big "
             [ngClass]="{'tabs__item--active': mainTab === 'BUY', 'tab-no-active': mainTab !== 'BUY'}"
             (click)="toggleMainTab('BUY')">Buy {{arrPairName[0]}}
@@ -156,7 +156,7 @@
           </svg>
         </span>
           <span style="vertical-align: middle;">Available: </span>
-          <a href="#">{{ (marketService.currencyPairsInfo$ | async).balanceByCurrency1 }} {{arrPairName[0]}}</a>
+          <a href="#"> {{ (marketService.currencyPairsInfo$ | async).balanceByCurrency1 }} {{arrPairName[0]}}</a>
         </div>
         <div>
           Fee: {{order.commission | number:'1.1-8'}} {{arrPairName[0]}}
@@ -178,9 +178,13 @@
 
 
   <div class="widget__content widget__content--mob" *ngIf="(breakPointService.breakpoint$ | async) === 'mobile'" style="height: 100%">
-    <div class="widget__header--mob">
-      <!--<div class="widget__name-mob widget__trade-title widget__trade-title&#45;&#45;green" *ngIf="mainTab === 'BUY'" ><img src="../../assets/img/btc-icon.svg" alt="">Buy BTC</div>-->
-      <!--<div class="widget__name-mob widget__trade-title widget__trade-title&#45;&#45;red" *ngIf="mainTab === 'SELL'" ><img src="../../assets/img/btc-icon.svg" alt="">Sell BTC</div>-->
+    <!--<div class="widget__header&#45;&#45;mob">-->
+      <!--<div class="widget__name-mob widget__trade-title widget__trade-title&#45;&#45;green" *ngIf="mainTab === 'BUY'" ><img src="../../assets/img/btc-icon.svg" alt="">-->
+        <!--Buy BTC-->
+      <!--</div>-->
+      <!--<div class="widget__name-mob widget__trade-title widget__trade-title&#45;&#45;red" *ngIf="mainTab === 'SELL'" ><img src="../../assets/img/btc-icon.svg" alt="">-->
+        <!--Sell BTC-->
+      <!--</div>-->
       <!--<div class="dropdown widget__limit-dropdown" [ngClass]="{'dropdown&#45;&#45;open': isDropdownOpen}"-->
            <!--(click)="toggleLimitDropdown()">-->
         <!--<div class="dropdown__btn">{{showLimit(dropdownLimitValue)}}</div>-->
@@ -188,7 +192,7 @@
           <!--<li class="dropdown__item" (click)="selectedLimit(limit)" *ngFor="let limit of limitsData">{{showLimit(limit)}}</li>-->
         <!--</ul>-->
       <!--</div>-->
-    </div>
+    <!--</div>-->
 
 
     <form  [formGroup]="limitForm" class="widget__trading-form--mob" *ngIf="dropdownLimitValue !== 'STOP_LIMIT'">
@@ -211,13 +215,36 @@
         </div>
       </div>
       <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
+        <div class="type">
+          <span class="type-title">
+            <span>
+              <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M17.5391 0H5.82031C4.46336 0 3.35938 1.10398 3.35938 2.46094V15.0781H0.78125C0.349766 15.0781 0 15.4279 0 15.8594V17.5391C0 18.896 1.10398 20 2.46094 20H14.1797C15.5366 20 16.6406 18.896 16.6406 17.5391V4.92188H19.2188C19.6502 4.92188 20 4.57211 20 4.14062V2.46094C20 1.10398 18.896 0 17.5391 0ZM2.46094 18.4375C1.96555 18.4375 1.5625 18.0345 1.5625 17.5391V16.6406C1.80793 16.6406 11.5535 16.6406 11.7188 16.6406V17.5391C11.7188 17.855 11.7822 18.1674 11.8886 18.4375H2.46094ZM15.0781 2.46094C15.0781 3.7507 15.0781 16.8103 15.0781 17.5391C15.0781 18.0345 14.6751 18.4375 14.1797 18.4375C13.6843 18.4375 13.2812 18.0345 13.2812 17.5391V15.8594C13.2812 15.4279 12.9315 15.0781 12.5 15.0781H4.92188V2.46094C4.92188 1.96551 5.32492 1.5625 5.82031 1.5625H15.2479C15.1414 1.83281 15.0781 2.14563 15.0781 2.46094ZM18.4375 3.35938H16.6406V2.46094C16.6406 1.96551 17.0436 1.5625 17.5391 1.5625C18.0345 1.5625 18.4375 1.96551 18.4375 2.46094V3.35938Z"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.89655 4.65517C6.89655 4.17906 7.28251 3.7931 7.75862 3.7931H12.2414C12.7175 3.7931 13.1034 4.17906 13.1034 4.65517C13.1034 5.13128 12.7175 5.51724 12.2414 5.51724H7.75862C7.28251 5.51724 6.89655 5.13128 6.89655 4.65517Z"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.89655 8.10345C6.89655 7.62734 7.28251 7.24138 7.75862 7.24138H12.2414C12.7175 7.24138 13.1034 7.62734 13.1034 8.10345C13.1034 8.57956 12.7175 8.96552 12.2414 8.96552H7.75862C7.28251 8.96552 6.89655 8.57956 6.89655 8.10345Z"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.89655 11.5517C6.89655 11.0756 7.28251 10.6897 7.75862 10.6897H10.1724C10.6485 10.6897 11.0345 11.0756 11.0345 11.5517C11.0345 12.0278 10.6485 12.4138 10.1724 12.4138H7.75862C7.28251 12.4138 6.89655 12.0278 6.89655 11.5517Z" />
+              </svg>
+
+            </span>
+            Order type
+          </span>
+          <div class="dropdown widget__limit-dropdown" [ngClass]="{'dropdown--open': isDropdownOpen}"
+               (click)="toggleLimitDropdown()">
+            <div class="dropdown__btn">{{showLimit(dropdownLimitValue)}}</div>
+            <ul class="dropdown__list">
+              <li class="dropdown__item" (click)="selectedLimit(limit)" *ngFor="let limit of limitsData">{{showLimit(limit)}}</li>
+            </ul>
+          </div>
+        </div>
         <div class="avaliable">
-        <span>
+        <span class="avaliable-title">
+          <span>
           <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M7.23181 6.84126V8.72983C7.23181 9.08029 7.41189 9.35214 7.56677 9.35214H12V6.21888H7.56677C7.41189 6.21888 7.23181 6.4908 7.23181 6.84126ZM9.05815 7.05851C9.43365 7.05851 9.73913 7.38464 9.73913 7.78551C9.73913 8.18639 9.43365 8.51251 9.05815 8.51251C8.68266 8.51251 8.37718 8.18639 8.37718 7.78551C8.37718 7.38464 8.68266 7.05851 9.05815 7.05851ZM7.56677 10.3633C6.85985 10.3633 6.2847 9.63047 6.2847 8.72983V6.84126C6.2847 5.94062 6.85979 5.20783 7.56677 5.20783H12V3.97574C12 3.35222 11.6172 2.82286 11.0894 2.63991L10.2623 0.325323C10.2155 0.194484 10.12 0.0902034 9.99851 0.0373555C9.87702 -0.0154251 9.74051 -0.0121895 9.6213 0.046523L4.49908 2.57102H1.31579C0.590302 2.57102 0 3.20122 0 3.97574V11.5952C0 12.3698 0.590302 13 1.31579 13H10.6842C11.4097 13 12 12.3698 12 11.5952V10.3633H7.56677ZM9.5581 1.19138L10.0511 2.57109H6.75876L9.5581 1.19138Z"/>
           </svg>
         </span>
           <span style="vertical-align: middle;">Avaliable: </span>
+        </span>
           <a href="#">{{ (marketService.currencyPairsInfo$ | async).balanceByCurrency1 }} {{arrPairName[0]}}</a>
         </div>
       </div>
@@ -259,7 +286,7 @@
         </label>
       </div>
       <div class="row row--jcsb widget__trading-row">
-        <div class="wrap-input widget__input">
+        <div class="wrap-input widget__input" style="max-width: 220px; margin: 4px auto;">
           <input class="wrap-input__input" type="text" formControlName="totalIn"
                  (input)="totalInput($event)"
                  name="totalIn">
@@ -288,16 +315,37 @@
           <div class="wrap-input__line"></div>
         </div>
       </div>
-
-
       <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
+        <div class="type">
+          <span class="type-title">
+            <span>
+              <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M17.5391 0H5.82031C4.46336 0 3.35938 1.10398 3.35938 2.46094V15.0781H0.78125C0.349766 15.0781 0 15.4279 0 15.8594V17.5391C0 18.896 1.10398 20 2.46094 20H14.1797C15.5366 20 16.6406 18.896 16.6406 17.5391V4.92188H19.2188C19.6502 4.92188 20 4.57211 20 4.14062V2.46094C20 1.10398 18.896 0 17.5391 0ZM2.46094 18.4375C1.96555 18.4375 1.5625 18.0345 1.5625 17.5391V16.6406C1.80793 16.6406 11.5535 16.6406 11.7188 16.6406V17.5391C11.7188 17.855 11.7822 18.1674 11.8886 18.4375H2.46094ZM15.0781 2.46094C15.0781 3.7507 15.0781 16.8103 15.0781 17.5391C15.0781 18.0345 14.6751 18.4375 14.1797 18.4375C13.6843 18.4375 13.2812 18.0345 13.2812 17.5391V15.8594C13.2812 15.4279 12.9315 15.0781 12.5 15.0781H4.92188V2.46094C4.92188 1.96551 5.32492 1.5625 5.82031 1.5625H15.2479C15.1414 1.83281 15.0781 2.14563 15.0781 2.46094ZM18.4375 3.35938H16.6406V2.46094C16.6406 1.96551 17.0436 1.5625 17.5391 1.5625C18.0345 1.5625 18.4375 1.96551 18.4375 2.46094V3.35938Z"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.89655 4.65517C6.89655 4.17906 7.28251 3.7931 7.75862 3.7931H12.2414C12.7175 3.7931 13.1034 4.17906 13.1034 4.65517C13.1034 5.13128 12.7175 5.51724 12.2414 5.51724H7.75862C7.28251 5.51724 6.89655 5.13128 6.89655 4.65517Z"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.89655 8.10345C6.89655 7.62734 7.28251 7.24138 7.75862 7.24138H12.2414C12.7175 7.24138 13.1034 7.62734 13.1034 8.10345C13.1034 8.57956 12.7175 8.96552 12.2414 8.96552H7.75862C7.28251 8.96552 6.89655 8.57956 6.89655 8.10345Z"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.89655 11.5517C6.89655 11.0756 7.28251 10.6897 7.75862 10.6897H10.1724C10.6485 10.6897 11.0345 11.0756 11.0345 11.5517C11.0345 12.0278 10.6485 12.4138 10.1724 12.4138H7.75862C7.28251 12.4138 6.89655 12.0278 6.89655 11.5517Z" />
+              </svg>
+
+            </span>
+            Order type
+          </span>
+          <div class="dropdown widget__limit-dropdown" [ngClass]="{'dropdown--open': isDropdownOpen}"
+               (click)="toggleLimitDropdown()">
+            <div class="dropdown__btn">{{showLimit(dropdownLimitValue)}}</div>
+            <ul class="dropdown__list">
+              <li class="dropdown__item" (click)="selectedLimit(limit)" *ngFor="let limit of limitsData">{{showLimit(limit)}}</li>
+            </ul>
+          </div>
+        </div>
         <div class="avaliable">
-        <span>
+        <span class="avaliable-title">
+          <span>
           <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M7.23181 6.84126V8.72983C7.23181 9.08029 7.41189 9.35214 7.56677 9.35214H12V6.21888H7.56677C7.41189 6.21888 7.23181 6.4908 7.23181 6.84126ZM9.05815 7.05851C9.43365 7.05851 9.73913 7.38464 9.73913 7.78551C9.73913 8.18639 9.43365 8.51251 9.05815 8.51251C8.68266 8.51251 8.37718 8.18639 8.37718 7.78551C8.37718 7.38464 8.68266 7.05851 9.05815 7.05851ZM7.56677 10.3633C6.85985 10.3633 6.2847 9.63047 6.2847 8.72983V6.84126C6.2847 5.94062 6.85979 5.20783 7.56677 5.20783H12V3.97574C12 3.35222 11.6172 2.82286 11.0894 2.63991L10.2623 0.325323C10.2155 0.194484 10.12 0.0902034 9.99851 0.0373555C9.87702 -0.0154251 9.74051 -0.0121895 9.6213 0.046523L4.49908 2.57102H1.31579C0.590302 2.57102 0 3.20122 0 3.97574V11.5952C0 12.3698 0.590302 13 1.31579 13H10.6842C11.4097 13 12 12.3698 12 11.5952V10.3633H7.56677ZM9.5581 1.19138L10.0511 2.57109H6.75876L9.5581 1.19138Z"/>
           </svg>
         </span>
           <span style="vertical-align: middle;">Avaliable: </span>
+        </span>
           <a href="#">{{ (marketService.currencyPairsInfo$ | async).balanceByCurrency1 }} {{arrPairName[0]}}</a>
         </div>
       </div>
@@ -338,8 +386,6 @@
         </span>
         </label>
       </div>
-
-
       <div class="row row--jcsb widget__trading-row">
         <div class="wrap-input widget__input widget__input--mr32">
           <input class="wrap-input__input" type="text"
