fix chat widget

--- a/src/app/dashboard/chat/chat.component.html
+++ b/src/app/dashboard/chat/chat.component.html
@@ -28,7 +28,7 @@
     <div class="widget__chat-wrap">
       <ng-scrollbar [autoHide]="false" [barClass]="'bar-class'" [thumbClass]="'thumb2'">
 
-        <div class="widget__message-day" *ngFor="let dateChatItem of dateChatItems">
+        <div class="" *ngFor="let dateChatItem of dateChatItems">
           <app-day-chat [dateChatItem]="dateChatItem"></app-day-chat>
         </div>
 
