--- a/src/app/dashboard/chat/day-chat/day-chat.component.html
+++ b/src/app/dashboard/chat/day-chat/day-chat.component.html
@@ -1,3 +1,3 @@
-<span>{{  dateChatItem.date | date }}</span>
+<div class="widget__message-day">{{  dateChatItem.date | date }}</div>
 
 <app-chat-message *ngFor="let message of messages" [message]="message"></app-chat-message>
