--- a/src/app/dashboard/chat/chat-message/chat-message.component.html
+++ b/src/app/dashboard/chat/chat-message/chat-message.component.html
@@ -1,10 +1,10 @@
-<div class="widget__message-wrap widget__message-wrap--left">
+<div class="widget__message-wrap " [ngClass]="{'widget__message-wrap--left': isMine}">
   <div class="widget__message-icon">
     <img src="../../assets/img/chat-icon1.svg" alt="">
   </div>
   <div class="widget__message">
-    <div class="widget__message-nickname">{{ message.nickname }}</div>
+    <div class="widget__message-nickname">{{ message.email | nickname}}</div>
     <p class="widget__message-text">{{ message.body }}</p>
   </div>
-  <div class="widget__message-time">{{ message.time }}</div>
+  <div class="widget__message-time">{{ message.messageTime | date:'hh:ss'}}</div>
 </div>
