--- a/src/app/dashboard/graph/graph.component.html
+++ b/src/app/dashboard/graph/graph.component.html
@@ -98,7 +98,7 @@
      <div class="amcharts-stock_chart_div" id="tv_chart_container"></div>
      <div class="widget__graph--mob">
       <!-- <div class="amcharts-stock_chart_div" id="tv_chart_container"></div> -->
-      <div class="widget__buy-sell-btn-wrap" style="margin-bottom: 45px;">
+      <div class="widget__buy-sell-btn-wrap">
         <a class="widget__buy-sell-btn widget__buy-sell-btn--green" (click)="setMobileWidget('trading', 'BUY')">Buy BTC</a>
         <a class="widget__buy-sell-btn widget__buy-sell-btn--red" (click)="setMobileWidget('trading', 'SELL')">Sell BTC</a>
       </div>
