--- a/src/assets/scss/components/_trading-notification.scss
+++ b/src/assets/scss/components/_trading-notification.scss
@@ -1,4 +1,3 @@
-
 .trading-notification{
   position: absolute;
   width: 100%;
@@ -71,7 +70,7 @@
     bottom: auto;
     transform: translate(-50%,-50%);
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
-    background: linear-gradient(to bottom, #F5F5F5 0%, #FDFDFD 50%, #F5F5F5 100%);
+    background-color: #264479;
     &__close{
       display: block;
     }
