--- a/src/assets/css/chart_style.css
+++ b/src/assets/css/chart_style.css
@@ -1,11 +1,11 @@
 #header-toolbar-indicators, #header-toolbar-compare, #header-toolbar-chart-styles, #header-toolbar-intervals, #header-toolbar-undo-redo, .group-wWM3zP_M-, .wrap-18oKCBRc-,
 .apply-common-tooltip{
-    background-color: rgba(0, 0, 0, 0);
+    background-color: #191A39;
     color: #A0A0A0;
 }
 
 html body, div.chart-controls-bar, #footer-chart-panel {
-    background-color: rgba(0, 0, 0, 0) !important;
+  background-color: rgba(0, 0, 0, 0) !important;
 }
 
 .chart-container {
@@ -24,5 +24,5 @@ html body, div.chart-controls-bar, #footer-chart-panel {
 }
 
 body > div.js-rootresizer__contents > div.layout__area--center > div {
-    background-color: rgba(27, 55, 112, 0);
+  background-color: rgba(27, 55, 112, 0);
 }
