--- a/src/assets/css/chart_style.css
+++ b/src/assets/css/chart_style.css
@@ -1,6 +1,6 @@
 #header-toolbar-indicators, #header-toolbar-compare, #header-toolbar-chart-styles, #header-toolbar-intervals, #header-toolbar-undo-redo, .group-wWM3zP_M-, .wrap-18oKCBRc-,
 .apply-common-tooltip{
-    background-color: #191A39;
+    background-color: rgba(0, 0, 0, 0);
     color: #A0A0A0;
 }
 
