--- a/src/assets/scss/components/_order-edit-popup.scss
+++ b/src/assets/scss/components/_order-edit-popup.scss
@@ -78,6 +78,11 @@
         }
       }
       .wrap-input__input{
+        &:valid{
+          ~.wrap-input__label{
+            background-color: #264479;
+          }
+        }
         &:focus{
           ~.wrap-input__label{
             background-color: #264479;
