fixed: mobile stile in 'markets' component

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -37,6 +37,7 @@
 @import "components/trading-notification";
 @import "components/order-edit-popup";
 @import "components/filters-popup";
+@import "components/scroll";
 //@import "components/footer";
 @import "components/modal";
 /*--- PAGES ---*/
