--- a/src/app/dashboard/markets/markets.component.html
+++ b/src/app/dashboard/markets/markets.component.html
@@ -187,7 +187,7 @@
 
   <div class="widget__content widget__content--mob" *ngIf="!marketSearch">
     <!--table mob start-->
-    <perfect-scrollbar style="max-width: 600px; height: 80vh" [config]="config">
+    <perfect-scrollbar style="max-width: 600px; height: calc(100vh - 139px);" [config]="config">
     <table class="table widget__table widget__table--mob widget__table-markets-mob">
       <thead>
       <tr>
