fixed: mobile stile in 'trade-history' component

--- a/src/assets/scss/components/_scroll.scss
+++ b/src/assets/scss/components/_scroll.scss
@@ -2,6 +2,10 @@
     background-color: rgba(255, 255, 255, 0.1) !important;
 }
 
+.ps__rail-y {
+    margin-right: 1px;
+}
+
 .ps__thumb-y {
     background-color: #191A39 !important;
 }
