--- a/src/assets/scss/pages/_referral.scss
+++ b/src/assets/scss/pages/_referral.scss
@@ -1,30 +1,35 @@
-.referral{
+.referral {
   display: none;
   /*--- modificators start ---*/
-  &--mob{
+  &--mob {
     display: block;
   }
   /*--- modificators end ---*/
   /*--- elements start ---*/
   /*--- elements end ---*/
 }
+
 /*--- media start ---*/
-@media (min-width:600px) {}
-@media (min-width:900px) {}
-@media (min-width:1200px) {
-  .referral{
+@media (min-width: 600px) {
+}
+
+@media (min-width: 900px) {
+}
+
+@media (min-width: 1200px) {
+  .referral {
     display: block;
     padding-top: 32px;
     /*--- modificators start ---*/
-    &--mob{
+    &--mob {
       display: none;
     }
     /*--- modificators end ---*/
     /*--- elements start ---*/
-    &__filter{
+    &__filter {
       position: relative;
       margin-top: 28px;
-      &:after{
+      &:after {
         content: '';
         display: block;
         position: absolute;
@@ -35,42 +40,42 @@
         background-color: $grey;
       }
     }
-    &__select{
+    &__select {
       width: 130px;
       margin-right: 24px;
     }
-    &__earned-wrap{
+    &__earned-wrap {
       display: flex;
       align-items: center;
-      .tilda{
-        color:$darker-blue;
+      .tilda {
+        color: $darker-blue;
         margin: 0 8px;
       }
     }
-    &__more-btn{
+    &__more-btn {
       margin-right: 16px;
-      &:hover{
+      &:hover {
         cursor: pointer;
       }
-      svg{
-        fill:$darker-blue;
+      svg {
+        fill: $darker-blue;
       }
     }
-    &__people-icon{
+    &__people-icon {
       margin-right: 12px;
-      svg{
+      svg {
         vertical-align: middle;
-        fill:$darker-blue;
+        fill: $darker-blue;
       }
     }
-    .table__row{
-      & td:nth-child(1){
+    .table__row {
+      & td:nth-child(1) {
         width: 300px;
       }
       //& td:nth-child(2){
       //  width: 25%;
       //}
-      & td:nth-child(3){
+      & td:nth-child(3) {
         width: 55px;
       }
       //& td:nth-child(4){
@@ -80,31 +85,31 @@
       //  width: 12.5%;
       //}
     }
-    &__level2{
+    &__level2 {
       padding-left: 32px;
-      .table--more-info{
+      .table--more-info {
         border-bottom: none;
       }
-      .table__row{
+      .table__row {
         background-color: unset !important;
-        td.spacer{
+        td.spacer {
           border-bottom: none;
           width: 16px;
         }
-        td{
-          border-bottom: 1px solid rgba(148,194,255,.2);
+        td {
+          border-bottom: 1px solid rgba(148, 194, 255, .2);
         }
         //& td:nth-child(1){
         //  border-bottom: none;
         //  width: 16px;
         //}
-        & td:nth-child(2){
+        & td:nth-child(2) {
           width: 276px;
         }
-        & td:nth-child(3){
+        & td:nth-child(3) {
           width: auto;
         }
-        & td:nth-child(4){
+        & td:nth-child(4) {
           width: 55px;
         }
         //& td:nth-child(5){
@@ -115,68 +120,118 @@
         //}
       }
     }
-    &__level3{
+    &__level3 {
       padding-left: 64px;
-      .table--more-info{
+      .table--more-info {
         border-bottom: none;
       }
-      .table__row{
+      .table__row {
         background-color: unset !important;
-        td.spacer{
+        td.spacer {
           border-bottom: none;
           width: 16px;
         }
-        td{
-          border-bottom: 1px solid rgba(148,194,255,.2);
+        td {
+          border-bottom: 1px solid rgba(148, 194, 255, .2);
         }
-        & td:nth-child(2){
+        & td:nth-child(2) {
           width: 276px;
         }
-        & td:nth-child(3){
+        & td:nth-child(3) {
           width: auto;
         }
-        & td:nth-child(4){
+        & td:nth-child(4) {
           width: 55px;
         }
       }
     }
-
     /*--- elements end ---*/
   }
+  //popup start
+  &__summary-popup {
+    position: relative;
+    background-color: #2E304D;
+    border-radius: 2px;
+    max-width: 440px;
+  }
+
+  /*--- elements end ---*/
+  .summary-popup {
+    &__triangle {
+      position: absolute;
+      top: 20px;
+      left: -10px;
+      border-right: 20px solid #2E304D;
+      border-top: 10px solid transparent;
+      border-bottom: 10px solid transparent;
+    }
+    &__head {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+      //width: 100%;
+      margin: 0 16px 16px;
+      border-bottom: 1px solid $light-blue;
+    }
+    &__title {
+      line-height: 16px;
+      margin: 8px 0;
+    }
+    &__sum-val {
+      display: inline-block;
+      margin-bottom: 8px;
+      &:first-of-type {
+        margin-right: 32px;
+      }
+      img {
+        vertical-align: middle;
+        margin-right: 8px;
+      }
+    }
+    &__search {
+      width: 128px;
+      bottom: -1px;
+    }
+    &__body {
+    }
+  }
 }
+
 /*--- media end ---*/
 
 /*--- DARK THEME START---*/
-.dark-theme{
-  .referral{
+.dark-theme {
+  .referral {
 
   }
 }
-@media (min-width:1200px) {
-  .dark-theme{
-    .referral{
-      &__filter{
-        &:after{
+
+@media (min-width: 1200px) {
+  .dark-theme {
+    .referral {
+      &__filter {
+        &:after {
           z-index: 0;
           background-color: $light-blue;
         }
       }
-      &__earned-wrap{
-        .tilda{
-          color:$light-blue;
+      &__earned-wrap {
+        .tilda {
+          color: $light-blue;
         }
       }
-      &__more-btn{
-        svg{
-          fill:$light-blue;
+      &__more-btn {
+        svg {
+          fill: $light-blue;
         }
       }
-      &__people-icon{
-        svg{
-          fill:$light-blue;
+      &__people-icon {
+        svg {
+          fill: $light-blue;
         }
       }
     }
   }
 }
+
 /*--- DARK THEME END---*/
